Closed
Bug 406140
Opened 18 years ago
Closed 18 years ago
The inner-border style property of GtkButton is not read
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: benjamin, Assigned: twanno)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
6.63 KB,
patch
|
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux ppc; en; rv:1.8.1.9) Gecko/20071101 (Debian-1.8.1.9-2) Epiphany/2.20
Build Identifier:
Since GTK+ 2.10 there is a inner-border style property for GtkButton. This style property replaces the old hard coded "child_spacing".
Reproducible: Always
Updated•18 years ago
|
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Comment 1•18 years ago
|
||
Maybe Ventron or twanno can look into this.
| Assignee | ||
Comment 2•18 years ago
|
||
Use the inner-border style property instead of using the hard coded child_spacing.
Assignee: nobody → twanno
Status: NEW → ASSIGNED
Attachment #300649 -
Flags: superreview?(roc)
Attachment #300649 -
Flags: review?(roc)
Comment on attachment 300649 [details] [diff] [review]
patch
moz_gtk_button_get_metrics should be called moz_gtk_button_get_inner_border instead?
Attachment #300649 -
Flags: superreview?(roc)
Attachment #300649 -
Flags: superreview+
Attachment #300649 -
Flags: review?(roc)
Attachment #300649 -
Flags: review+
| Assignee | ||
Comment 4•18 years ago
|
||
Updated patch, addresses comment #3
This makes the buttons drawn in Firefox follow GTK Theme configuration more closely.
Attachment #300649 -
Attachment is obsolete: true
Attachment #300734 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #300734 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 5•18 years ago
|
||
Checking in widget/src/gtk2/gtk2drawing.c;
/cvsroot/mozilla/widget/src/gtk2/gtk2drawing.c,v <-- gtk2drawing.c
new revision: 1.72; previous revision: 1.71
done
Checking in widget/src/gtk2/gtkdrawing.h;
/cvsroot/mozilla/widget/src/gtk2/gtkdrawing.h,v <-- gtkdrawing.h
new revision: 1.52; previous revision: 1.51
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
Comment 6•18 years ago
|
||
With this bugfix included i get a empty browser window (just the menu bar) under Debian Etch (GTK 2.8).
(Gecko:5683): Gtk-WARNING **: gtkwidget.c:7322: widget class `GtkButton' has no property named `inner-border'
I don't now if this is a valid bug (runtime requirement seems to be GTK 2.10), but in a blog entry about a crash when trying to print under GTK 2.8, Michael Ventnor mentioned that the problem would be taken into account.
just think I would mention that ASUS EEE has above mentioned "empty window problem". Since Its quite impossible for EEE user to update gtk. I would suggest this problem being investigated again.
Will EEE users actually be able to install FF3 (when it's done)?
I don't know, but mozilla.com always offer direct extractable packages, so if its offered from official website, it should run properly, even if no *.deb from ASUS.
Comment 10•18 years ago
|
||
Would it be that hard to add a check for gtk version? I'm all for requiring 2.10, but I think it'd be best to actually require it (that is, throw an error on boot, not just break) or at least insert a workaround. With the parts that I've introduced that have required 2.10, they have only removed little lines. They never broke the browser
[Sidebar: I also think we should consider adding small things from 2.12 by using checks. This would allow for things like arrow-scaling]
| Assignee | ||
Comment 11•18 years ago
|
||
(In reply to comment #10)
> Would it be that hard to add a check for gtk version?
>
No, I can create a patch if that is desired.
> [Sidebar: I also think we should consider adding small things from 2.12 by
> using checks. This would allow for things like arrow-scaling]
>
That is being implemented in bug 415163
Comment 12•18 years ago
|
||
I don't know if GTK 2.10 is going to be officially required to run firefox 3.
Im fine either way, I can jut run 20080206 nightly, or try a new distro, Maybe ASUS will compile a version of firefox 3 for gtk 2.8 (which I doubt). Im just saying ASUS EEE pc is a significant linux market that has very impressive future, if its not very hard, developers might want to find a work around here.
Comment 13•18 years ago
|
||
Will discussion continue here about getting Firefox 3 working on EEE PC or is there a better bug for that?
We should probably file a new bug on that.
Comment 16•18 years ago
|
||
See bug 418885 for discussion of eliminating/reducing the GTK+ 2.10 dependency. A patch has already been proposed that fixes the "inner-border" issue (amongst other things) introduced here.
You need to log in
before you can comment on or make changes to this bug.
Description
•