Bug 406140 - "The inner-border style property of GtkButton is not read" [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a1.9=schrep]